# FitBuddy

fitbuddy_core/: CMakeLists.txt  README.md  package.xml  setup.py
fitbuddy_core/launch/: fitbuddy.launch
fitbuddy_core/path_planner/: path_planner.py
fitbuddy_core/path_planner/TVOpt/: L1AO.py  MPC_L1AO.py  PCIP.py  __init__.py
fitbuddy_core/scripts/: car_node.py  install_uwb_udev_rules.sh  lidar_node.py  main_node.py  rplidar.rules  target_node.py  uwb_node.py
fitbuddy_core/scripts/TVOpt/: L1AO_interactive.py  MPC.py  MPC_PCIP.py  PCIP_interactive.py  TVOptAlgorithm.py
fitbuddy_core/scripts/path_planner/: l1ao_mpc_planner.py
fitbuddy_core/src/: rplidar_driver.cpp
fitbuddy_core/visualizer/: rvis_customized.py  visMatplotlib.py
